
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 JUN 07a
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in write_model_fluid_template(), read_model_fluid_actions(), added in various locations code 
      to handle N2VIBJOULEHEATINGMODEL_PARENT2024
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), made the N2 vibrational Joule heating source terms proportional to chiN2
    - in find_Semfield(), added model N2VIBJOULEHEATINGMODEL_PARENT2024
  * in model/thermo/_generic/thermo.c
    - added _zetav_from_Te_Parent2024()
  * 

2024 JUN 03b
  * in model/chem/_Air_Plasma_11s/rodriguez2024.c
    - fixed a bug with one spline reaction
  * in model/chem/_Air_Plasma_11s/
    - added rodriguezpark2024.c
  * in model/chem/_Air_Plasma_11s/chem.c
    - added the model rodriguezpark2024
  * in model/chem/_Air_Plasma_8s/rodriguez2024.c
    - fixed a bug with one spline reaction
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - updated the document 
  * in model/chem/_Air_Plasma_8s/doc/report.tex
    - updated the document
    

2024 JUN 03a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - fixed a mistake in reactions 8 and 14 (rates were off by several orders of magnitude)


2024 JUN 01a
  * in model/transport/_Gupta-Yos/transport.c
    - added TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_IONMOBILITIESPARENTMACHERET
    - in find_nuk_eta_kappak_muk(), added code for TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_IONMOBILITIESPARENTMACHERET
    - in _mueNk_from_Te(), added neutral species check also for 
      TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_MOBILITIESPARENTMACHERET


2024 MAY 28b
  * in model/fluid/_Favre-Reynolds/fluid_bdry.c
    - fixed a bug in update_bdry_wall_ablation()