@@ -1012,61 +1012,60 @@ double _zetav_from_Te_Parent2024(double Te){
   double zetav;
   double Te_control[] = 
   { 
-	3022.97876400000,
-	3945.53850200000,
-	5052.61018800000,
-	6437.03002100000,
-	7821.44985400000,
-	10451.0352200000,
-	12486.4689100000,
-	16037.4535600000,
-	20458.7775900000,
-	27537.5378400000,
-	33745.9587200000,
-	44364.0991000000,
-	56769.3363300000,
-	70926.8568400000,
-	78899.1655200000,
-	89528.9104200000,
-	100158.655300000,
-	119642.652800000,
-	150626.734600000,
-	194956.020100000,
-	500000,
-	3000000
+	3000,
+	3945.538502,
+	5052.610188,
+	6437.030021,
+	7821.449854,
+	10451.03522,
+	12486.46891,
+	16037.45356,
+	20458.77759,
+	27537.53784,
+	33745.95872,
+	44364.0991,
+	56769.33633,
+	70926.85684,
+	78899.16552,
+	89528.91042,
+	100158.6553,
+	119642.6528,
+	150626.7346,
+	232090.5001,
+	288952.6727,
+	3000000.000
+
   };
   double zetav_control[] = 
   {
-	0.785929661000000,
-	0.802053062000000,
-	0.811535806000000,
-	0.827959212000000,
-	0.860333040000000,
-	0.941075705000000,
-	0.989502763000000,
-	0.982456497000000,
-	0.978987544000000,
-	0.970659412000000,
-	0.951327832000000,
-	0.850109310000000,
-	0.607349465000000,
-	0.315364873000000,
-	0.205844146000000,
-	0.117755078000000,
-	0.0709243300000000,
-	0.0321432430000000,
-	0.0120211200000000,
-	0.00369344100000000,
-	0.00200000000000000,
-	1.00000000000000e-06
+	0.785926661,
+	0.802053062,
+	0.811535806,
+	0.827959212,
+	0.86033304,
+	0.941075705,
+	0.989502763,
+	0.982456497,
+	0.978987544,
+	0.970659412,
+	0.951327832,
+	0.85010931,
+	0.607349465,
+	0.315364873,
+	0.205844146,
+	0.117755078,
+	0.07092433,
+	0.032143243,
+	0.01202112,
+	0.001500938,
+	0.001174743,
+	0.0000
   };  
   int N = sizeof(Te_control)/sizeof(Te_control[0]);
   Te=min(Te_control[N-1],max(Te,Te_control[0]));
   zetav = EXM_f_from_monotonespline(N, Te_control, zetav_control, Te);
   return(zetav);
 }
-
-
 
 /* fraction of electron joule heating that is consumed in nitrogen vibrational energy 
  * Aleksandrov, N. L., Vysikailo, F. I., Islamov, R. S., Kochetov, I. V., Napartovich, A. P., and Pevgov, V. G., “Electron
